--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -7,5 +7,6 @@ jobs:
   hello-job:
     runs-on: ubuntu-latest
     steps:
+        #step1 : Hello World program
       - name: Print Hello World
         run: echo "Hello World"
